<?xml version="1.0"?>
<package format="2">
  <name>lanelet2_interface_ros</name>
  <version>1.0.0</version>
  <description>Interface between lanelet2 and ROS.</description>

  <license>contact-the-maintainer</license>
  <maintainer email="wirges@fzi.de">Sascha Wirges</maintainer>
  <author email="wirges@fzi.de">Sascha Wirges</author>
  <url type="repository">https://gitlab.mrt.uni-karlsruhe.de/lanelet2/lanelet2_interface_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>rosinterface_handler</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <depend>lanelet2</depend>
  <depend>lanelet2_msgs_ros</depend>

  <export>
  </export>
</package>
